# DiSCaMB

./: CMakeLists.txt  LICENSE  README.md  config.h.in  discamb_config.h.in
discamb_py/: CMakeLists.txt  CrystalStructure.cpp  CrystalStructure.h  discamb_py.cpp  har_utilities.cpp  har_utilities.h  taam_utilities.cpp  taam_utilities.h
doc/: CMakeLists.txt  README
doc/doxygen/: 1_features.md  2_installation.md  3_getting_started.md  4_examples.md  5_theory_and_implementation.md  6_algorithms_for_parameters.md  7_differences_in_params_xd.md  8_license.md  9_contact_information.md  Doxyfile.in  PageOrder.dox  _main.md  customdoxygen.css  example2.dox  header.html  refs.bib
examples/: CMakeLists.txt
examples/compare_adps/: CMakeLists.txt  compare_adps.cpp
examples/compare_tsc/: CMakeLists.txt  compare_tsc.cpp
examples/discamb_ff/: CMakeLists.txt  discamb_ff.cpp
examples/example_02_form_factors/: CMakeLists.txt  example_02.cpp
examples/fast_scattering_calculator/: AnyScattererStructureFactorCalculator2.cpp  AnyScattererStructureFactorCalculator2.h  CMakeLists.txt  fast_scattering_calculator.cpp
examples/fragHarMacromol/: CMakeLists.txt  fragHarMacromol.cpp
examples/harBankMaker/: AssignAtomTypes.cpp  AssignAtomTypes.h  CMakeLists.txt  CalcDensities.cpp  CalcDensities.h  ChooseStructures.cpp  ChooseStructures.h  FilterStructures.cpp  FilterStructures.h  LcsCheck.cpp  LcsCheck.h  Program.cpp  Program.h  RunAll.cpp  RunAll.h  WfnCalc.cpp  WfnCalc.h  harBankMaker.cpp
examples/harFF/: CMakeLists.txt  harFF.cpp
examples/lab/: CMakeLists.txt  README.md  lab.cpp
examples/pre_lsq/: CMakeLists.txt  pre_lsq.cpp
examples/sf_calculator/: CMakeLists.txt  README.md  sf_calculator.cpp
examples/taam_symmetry/: CMakeLists.txt  taam_symmetry.cpp
examples/typeStat/: CMakeLists.txt  typeStat.cpp
examples/typeStatParallel/: CMakeLists.txt  typeStatParallel.cpp
examples/typeSubtype/: CMakeLists.txt  typeSubtype.cpp
src/: CMakeLists.txt
src/AtomTyping/: AtomType.cpp  CMakeLists.txt  ChiralityComparator.cpp  CrystalAtomTypeAssigner.cpp  GraphVertex.cpp  GraphVertexComparator.cpp  LocalCoordinateSystem.cpp  LocalCoordinateSystemAssigner.cpp  LocalCoordinateSystemCalculator.cpp  MacromolecularAtomAssignment.cpp  MolecularAtomTypeAssigner.cpp  MolecularLcsCalculator.cpp  RingMatchChecker.cpp  RingMatchCheckerTypeType.cpp  StructureWithDescriptors.cpp  TypeMatchAlgorithm.cpp  TypeTree.cpp  atom_typing_utilities.cpp
src/BasicChemistry/: CMakeLists.txt  ChemicalElement.cpp  PeriodicTable.cpp  basic_chemistry_utilities.cpp  chemical_element_data.cpp  periodic_table.cpp
src/BasicUtilities/: CMakeLists.txt  Sheduler.cpp  Task.cpp  Timer.cpp  discamb_env.cpp  discamb_version.cpp  file_system_utilities.cpp  parse_cmd.cpp  utilities.cpp
src/CrystalStructure/: AtomInCrystalID.cpp  CMakeLists.txt  ConstantLocalCoordinateSystem.cpp  Crystal.cpp  CrystalVarianceCovarianceMatrix.cpp  CrystallographicRational.cpp  LocalCoordinateSystemInCrystal.cpp  ReciprocalLatticeUnitCell.cpp  SpaceGroup.cpp  SpaceGroupOperation.cpp  StructuralParametersConverter.cpp  UnitCell.cpp  UnitCellContent.cpp  crystal_structure_utilities.cpp  crystallographic_point_group_tables.cpp
src/GPU/: CMakeLists.txt
src/HC_Model/: CMakeLists.txt  ClementiRaimondiData.cpp  ClementiRoettiData.cpp  DeformationValenceParameters.cpp  HC_WfnData.cpp  SlaterOrbitalWfnData.cpp  SuCoppensMacchiData.cpp  XdLocalCoordinateSystem.cpp  hc_model_utilities.cpp
src/IO/: CMakeLists.txt  MATTS_BankReader.cpp  NativeIAM_Reader.cpp  atom_type_io.cpp  cif_io.cpp  discamb_io.cpp  fragmentation_io.cpp  gaussian_io.cpp  hkl_io.cpp  mol2_io.cpp  molecule_io.cpp  olex2_io.cpp  pdb_io.cpp  proatom_db_io.cpp  rsp_io.cpp  shelx_io.cpp  structure_io.cpp  tham_io.cpp  tsc_io.cpp  vtk_io.cpp  wfn_io.cpp  xd_io.cpp  xyz_io.cpp
src/MathUtilities/: CMakeLists.txt  CrossProductLcs.cpp  GraphAlgorithms.cpp  InjectionsIterator.cpp  LebedevGrid.cpp  MixedRadixIterator.cpp  MixedRadixNumberIterator.cpp  NaturalCubicSpline.cpp  PeriodicGridInterpolator.cpp  RadialGrid.cpp  RealSphericalHarmonics.cpp  SphConverter.cpp  SphMatrix.cpp  SphericalHarmonics.cpp  algebra3d.cpp  geometry3d.cpp  graph_algorithms.cpp  lebedev_laikov.cpp  molecular_radial_grids.cpp  radial_grid.cpp  real_spherical_harmonics.cpp  statistics.cpp
src/QuantumChemistry/: CMakeLists.txt  CrystalFragmentMultipoleCluster.cpp  ElectronDensityCalculator.cpp  ElectronDensityPartition.cpp  ElectronDensityPartitionType.cpp  GaussianRunner.cpp  HirshfeldPartition.cpp  MbisPartition.cpp  OrcaExecutionTimeEstimator.cpp  OrcaRunner.cpp  ProatomDB.cpp  PromoleculeElectronDensity.cpp  SphericalAtomicDensity.cpp  WaveFunctionCalculationData.cpp  WaveFunctionDataGeneratorRunner.cpp  basis_set_data.cpp  distributed_multipoles.cpp  ecp_electron_density_tables.cpp  fragmentation.cpp
src/Scattering/: AnyHcCalculator.cpp  AnyIamCalculator.cpp  AnyScattererStructureFactorCalculator.cpp  AnyScattererStructureFactorCalculator2.cpp  AtomicDensityTransform.cpp  AtomicFormFactorCalculationsManager.cpp  BankHcFunctions.cpp  CMakeLists.txt  CombinedStructureFactorCalculator.cpp  ConstFormFactorCalculationsManager.cpp  ElectronFromXrayFormFactorCalculationsManager.cpp  FragHarMacromol.cpp  HansenCoppensStructureFactorCalculator.cpp  HansenCoppensStructureFactorCalculatorDev.cpp  HansenCoppens_SF_Engine.cpp  HansenCoppens_SF_Engine2.cpp  HansenCoppens_SF_Engine3.cpp  HansenCoppens_SF_Engine4.cpp  HansenCoppens_SF_EngineSymm.cpp  HcAtomBankStructureFactorCalculator.cpp  HcAtomBankStructureFactorCalculator2.cpp  HcFormFactorCalculationsManager.cpp  HirshfeldAtomModelSettings.cpp  IamFormFactorCalculationsManager.cpp  IamSfCalculator.cpp  MATTS_Default.cpp  MATTS_Default.cpp.bck  NGaussianFormFactor.cpp  NGaussianFormFactorsTable.cpp  NumericalDensityIamFfCalculator.cpp  NumericalDensityIamSfCalculator.cpp  NumericalSphericalAtomFormFactor.cpp  SF_CalcDataTypes.cpp  SfCalculator.cpp  SlaterTypeOrbitalScattering.cpp  StockholderAtomBankFormFactorCalculationManager.cpp  StockholderAtomBankSfCalculator.cpp  (+14 more)
(+277 files in other folders)
