include(${DISCAMB_MODULES_DIR}/lib_tools.cmake)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/lib)

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/../third-party/ucif" "${CMAKE_CURRENT_BINARY_DIR}/ucif")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/../third-party/vflib" "${CMAKE_CURRENT_BINARY_DIR}/vflib")

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/AtomTyping" "${CMAKE_CURRENT_BINARY_DIR}/AtomTyping")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/BasicChemistry" "${CMAKE_CURRENT_BINARY_DIR}/BasicChemistry")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/BasicUtilities" "${CMAKE_CURRENT_BINARY_DIR}/BasicUtilities")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/CrystalStructure" "${CMAKE_CURRENT_BINARY_DIR}/CrystalStructure")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/discamb" "${CMAKE_CURRENT_BINARY_DIR}/discamb")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/HC_Model" "${CMAKE_CURRENT_BINARY_DIR}/HC_Model")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/IO" "${CMAKE_CURRENT_BINARY_DIR}/IO")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/MathUtilities" "${CMAKE_CURRENT_BINARY_DIR}/MathUtilities")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/QuantumChemistry" "${CMAKE_CURRENT_BINARY_DIR}/QuantumChemistry") 
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/Scattering" "${CMAKE_CURRENT_BINARY_DIR}/Scattering")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/StructuralProperties" "${CMAKE_CURRENT_BINARY_DIR}/StructuralProperties")

if(BUILD_FOR_GPU)
    ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/GPU" "${CMAKE_CURRENT_BINARY_DIR}/GPU")
endif(BUILD_FOR_GPU)



